# nqxpack

./: .gitignore  README.md  pyproject.toml
.copybara/: copy.bara.sky
.github/copybara/: common-netketfoundation.bara.sky  common-nqx.bara.sky  nqx-oss.sky  os-pr.sky
.github/workflows/: CI.yml  common-copybara.bara.sky.template  copybara.yml  formatting_check.yml  publish.yml  release.yml
design/: saving_mcstates.md  serialization_options_proposal.md
docs/: Makefile  README.md  conf.py  getting_started.md  index.md
docs/api/: index.md
docs/tutorials/: base.md  custom_serialization.md  index.md  plugin_registry.md
nqxpack/: __init__.py  registry.py
nqxpack/_src/: api.py  contextmgr.py  distributed.py  errors.py  io.py  version_utils.py
nqxpack/_src/lib_v1/: asset_lib.py  custom_types.py  lib.py  options.py  resolution.py  versioned_registry.py
nqxpack/_src/registry/: __init__.py  _loader.py  flax.py  jax.py  netket.py  netket_operator.py  stdlib.py
test/common/: __init__.py  common.py
test/nqxpack/: test_asset_manager.py  test_jax_array_serialization.py  test_jitted_callable_serialization.py  test_lazy_registration.py  test_options.py
test/nqxpack/integration/: test_mcstate.py  test_mcstate_list_params.py  test_operators.py  test_sampler_rules.py  test_samplers.py  test_save_sample_cache.py  test_saveload.py
